[gd_scene load_steps=13 format=1]

[ext_resource path="res://gui/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://gui/screen/splatter.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/hud/dialogue_popup/dialogue.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/hud/instruction_popup/instruction.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/hud/location_popup/location.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/hud/message_popup/message.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/hud/player_status/player_status.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/hud/weapon_select/weapon_select.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/hud/weapon_status/weapon_status.tscn" type="PackedScene" id=9]
[ext_resource path="res://gui/screen/fail.tscn" type="PackedScene" id=10]
[ext_resource path="res://gui/screen/success.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui/screen/pre.tscn" type="PackedScene" id=12]

[node name="hud" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="splatter" parent="." instance=ExtResource( 2 )]

[node name="dialogue" parent="." instance=ExtResource( 3 )]

margin/left = 704.0
margin/top = 740.0
margin/right = 744.0
margin/bottom = 754.0

[node name="instruction" parent="." instance=ExtResource( 4 )]

margin/left = 832.0
margin/top = 774.0
margin/right = 1088.0
margin/bottom = 902.0

[node name="location" parent="." instance=ExtResource( 5 )]

margin/left = 1614.0
margin/top = 508.0
margin/right = 1654.0
margin/bottom = 548.0

[node name="message" parent="." instance=ExtResource( 6 )]

margin/left = 50.0
margin/top = 348.0
margin/right = 90.0
margin/bottom = 362.0

[node name="player_status" parent="." instance=ExtResource( 7 )]

margin/left = 894.0
margin/top = 50.0
margin/right = 934.0
margin/bottom = 64.0

[node name="weapon_select" parent="." instance=ExtResource( 8 )]

[node name="weapon_status" parent="." instance=ExtResource( 9 )]

margin/left = 894.0
margin/top = 898.0
margin/right = 934.0
margin/bottom = 912.0

[node name="fail" parent="." instance=ExtResource( 10 )]

visibility/visible = false

[node name="success" parent="." instance=ExtResource( 11 )]

visibility/visible = false

[node name="pre" parent="." instance=ExtResource( 12 )]


