extends CanvasLayer

#----------------------------------------------------------------------------------------------------
# global
#----------------------------------------------------------------------------------------------------

#-------------------------
# state
#-------------------------

var state = {
	"dialogue":false,
	"instruction":false,
	"location":false,
	"message":false,
	"player_status":false,
	"weapon_select":false,
	"weapon_status":false
	}


#-------------------------
# content
#-------------------------

var content = {
	"dialogue":"",
	"instruction":"",
	"location":"",
	"message":"",
	"player_status":"",
	"weapon_select":"",
	"weapon_status":""
	}


#----------------------------------------------------------------------------------------------------
# _ready
#----------------------------------------------------------------------------------------------------

func _ready():
	set_process(true)


#----------------------------------------------------------------------------------------------------
# _process
#----------------------------------------------------------------------------------------------------

func _process(delta):
	pass


#----------------------------------------------------------------------------------------------------
# end
#----------------------------------------------------------------------------------------------------
